<resources>
    <string name="app_name">Remind Me</string>
    <string name="action_send_mail">Send as email</string>
    <string name="title_activity_bill_list">BillListActivity</string>
    <string name="title_activity_bill">Edit Bill</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear_bill_list_cache">Clear Bill/Payment List Cache</string>
    <string name="action_populate_bill_list_cache">Populate/Reset Bill/Payment List Cache</string>
    <string name="action_read_bill_list_cache">Read Bill/Payment List cache (Debug Option)</string>
    <string name="tentative_date_default">1</string>
    <string name="action_next">next</string>
    <string name="title_activity_main">Remind Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_bills">Bills</string>
    <string name="title_activity_payment">Edit Payment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="pref_name_title">Your Name</string>
    <string name="pref_email_title">Your email</string>
    <string name="pref_launch_option_title">Launch App on</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
