<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_populate_bill_list_cache"
        android:orderInCategory="100"
        android:title="@string/action_populate_bill_list_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_bill_list_cache"
        android:orderInCategory="100"
        android:title="@string/action_clear_bill_list_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_read_bill_list_cache"
        android:orderInCategory="100"
        android:title="@string/action_read_bill_list_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>