<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="pref_name"
        app:title="@string/pref_name_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="pref_email"
        app:title="@string/pref_email_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="@string/pref_default_launch_option"
        app:entries="@array/pref_launch_option_entries"
        app:entryValues="@array/pref_launch_option_values"
        app:key="pref_launh_option"
        app:title="@string/pref_launch_option_title"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>
